# qamock

./: .gitignore  .pre-commit-config.yaml  README.md  cliff.toml  mise.toml  mock.py  pyproject.toml  qamock.py  requirements-dev.txt
.github/workflows/: release.yml
scripts/: release.py
test/: test_mock.py  test_qamock.py
